test/libyul/yulSyntaxTests/invalid/jumpdest_disallowed.yul
{
    jumpdest()
}
// ----
// DeclarationError 4619: (6-14='jumpdest'): Function "jumpdest" not found.
